--- a/src/RssReader/Views/Home/Index.cshtml
+++ b/src/RssReader/Views/Home/Index.cshtml
@@ -1,8 +1,32 @@
 ﻿@{
-	ViewData["Title"] = "Feeds";
+	ViewData["Title"] = "Sign In";
 }
 
-<div class="content">
-	<h1>Feeds</h1>
-	<p>TODO</p>
+<h1 class="title">RSS Reader</h1>
+<h2 class="subtitle">Never miss a post</h2>
+<div class="tile is-ancestor">
+	<div class="tile is-parent">
+		<div class="tile">
+			<div class="notification is-info">
+				<h3 class="title is-4">Add feeds</h3>
+				<p>Add your favorite feeds so you always know when there is something new to read.</p>
+			</div>
+		</div>
+	</div>
+	<div class="tile is-parent">
+		<div class="tile">
+			<div class="notification is-info">
+				<h3 class="title is-4">Track your favorites</h3>
+				<p>Keep track of what you haven't read yet and save your favorites to read again.</p>
+			</div>
+		</div>
+	</div>
+	<div class="tile is-parent">
+		<div class="tile">
+			<div class="notification is-info">
+				<h3 class="title is-4">Read!</h3>
+				<p>Read articles and blog posts without leaving your feed.</p>
+			</div>
+		</div>
+	</div>
 </div>
