--- a/src/RssReader/Views/Shared/_Layout.cshtml
+++ b/src/RssReader/Views/Shared/_Layout.cshtml
@@ -8,30 +8,14 @@
 	<link rel="stylesheet" href="~/lib/bulma/bulma.css"/>
 </head>
 <body>
-<nav class="navbar is-dark" role="navigation" aria-label="main navigation">
-	<div class="navbar-brand">
-		<a class="navbar-item" asp-area="" asp-controller="Home" asp-action="Index">
-			<img src="images/rss_icon.png" alt="RSS Icon"/>
-		</a>
-		<div class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navMenu">
-			<span aria-hidden="true"></span>
-			<span aria-hidden="true"></span>
-			<span aria-hidden="true"></span>
-		</div>
-	</div>
-	<div id="navMenu" class="navbar-menu">
-		<div class="navbar-start">
-			<a class="navbar-item" asp-area="" asp-controller="Home" asp-action="Index">Feeds</a>
-		</div>
-		<div class="navbar-end">
-			<div class="navbar-item">
-				<div class="buttons">
-					<a class="button is-light">Sign Out</a>
-				</div>
-			</div>
-		</div>
-	</div>
-</nav>
+@if (User.Identity is { IsAuthenticated: true })
+{
+	<partial name="AuthenticatedNavigation" />
+}
+else
+{
+	<partial name="UnauthenticatedNavigation" />
+}
 <section class="section">
 	<div class="container">
 		@RenderBody()
