--- a/src/RssReader/Views/Feeds/Index.cshtml
+++ b/src/RssReader/Views/Feeds/Index.cshtml
@@ -1,8 +1,17 @@
+@model FeedsModel
 @{
 	ViewData["Title"] = "Feeds";
 }
 
 <div class="content">
 	<h1>Feeds</h1>
-	<p>TODO</p>
+	<ul>
+	@foreach (var feed in @Model.Feeds)
+	{
+		<li>
+			<h1 class="title is-4">@feed.Name</h1>
+			<h2 class="subtitle is-5">@feed.Domain</h2>
+		</li>
+	}
+	</ul>
 </div>
