Simple add feed form

--- a/src/RssReader/Views/Shared/AuthenticatedNavigation.cshtml
+++ b/src/RssReader/Views/Shared/AuthenticatedNavigation.cshtml
@@ -16,6 +16,7 @@
 		<div class="navbar-end">
 			<div class="navbar-item">
 				<div class="buttons">
+					<a class="button is-light" asp-area="" asp-controller="Feeds" asp-action="AddFeed">Add Feed</a>
 					<a class="button is-light" asp-area="" asp-controller="Home" asp-action="Logout">Sign Out</a>
 				</div>
 			</div>
