--- a/src/RssReader/Views/Shared/UnauthenticatedNavigation.cshtml
+++ b/src/RssReader/Views/Shared/UnauthenticatedNavigation.cshtml
@@ -1,7 +1,7 @@
 <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
 	<div class="navbar-brand">
 		<a class="navbar-item" asp-area="" asp-controller="Home" asp-action="Index">
-			<img src="images/rss_icon.png" alt="RSS Icon"/>
+			<img src="~/images/rss_icon.png" alt="RSS Icon"/>
 		</a>
 		<div class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navMenu">
 			<span aria-hidden="true"></span>
